Update and rename AnhThu.html to bat-ngo-chua.html

--- a/bat-ngo-chua.html
+++ b/bat-ngo-chua.html
@@ -44,9 +44,8 @@ canvas {
 
 
  <BODY>
-     <img src="" alt="">
   <canvas id="pinkboard">
-      <u>Anh Thư</u>
+      
   </canvas>
 
   <script>
@@ -422,7 +421,7 @@ var ParticlePool = (function() {
 
     // create the fill
 
-    context.fillStyle = '#ea80b0';
+    context.fillStyle = '#DC143C';
 
     context.fill();
 
